2004-09-27  Mark McLoughlin  <mark@skynet.ie>

	* charpick.png: new icon from Jakub Steiner.

2004-09-06  Shaun McCance  <shaunm@gnome.org>

	* help/C/char-palette-C.omf:
	* help/C/char-palette.xml:
	- Updates for 2.8 from Angela Boyle

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec
	* charpick.c: Fix include.
	* properties.c: (phelp_cb): Use gnome_help_*.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* charpick.c: (build_table), (about), (help_cb),
	(charpicker_applet_fill): s/gtk_signal_connect/g_signal_connect
	* charpick.h: ANSI parameter lists.

2004-07-29  Kjartan Maraas  <kmaraas@gnome.org>

	* charpick.c: (applet_destroy): Merge fix for bug #148498
	from stable.

2004-07-22  Glynn Foster  <glynn.foster@sun.com>

	* help/ja/char-palette-ja.omf,
	  help/ja/char-palette.xml,
	  help/ja/figures/charpalette_applet.png,
	  help/ja/figures/charpalette_chargroup.png,
	  help/ja/legal.xml, Update with docs from the Sun
	  team. How I managed to commit mailcheck ones here I'll
	  never know ;)
	* help/ja/figures/charpick_applet.png,
	  help/ja/figures/charpick_characters.png,
	  help/ja/figures/charpick_chargroup.png,
	  help/ja/figures/mailcheck_applet.png: Remove older
	  figures.

2004-07-21  Mark McLoughlin  <mark@skynet.ie>

	* help/ja/Makefile.am,
	  help/ja/mailcheck-ja.omf,
	  help/ja/mailcheck.xml: remove mailcheck docs and
	install the char-palette ones again.

2004-07-08  Vincent Noel  <v.r.noel@larc.nasa.gov>

	* charpick.c (applet_size_allocate): use the "size-allocate"
	signal to get the panel size.
	(build_table): Fix how the row number is computed to get the
	characters spread out on multiple rows.

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.c (build_table): Set the atk description
	for each of the toggle buttons Fixes #128292
 
	Patch by:  Arvind Samptur  <arvind.samptur@wipro.com>

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.h: